--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@ pip install python-dotenv</code></pre>
 											<li>
 												<p>In the project directory, create a .env file that contains:</p>
 												<pre><code>PRIVATE_KEY=your wallet private key here</code></pre>
-												<p>Create an API key at Infura.com and add the Goerli key to the .env file</p>
-												<pre><code>WEB3_INFURA_PROJECT_ID=your goerli infura key here</code></pre>
+											<li>
+												<p>Create an API key at <a href="https://infura.io/">Infura</a> and add it to the .env file</p>
+												<pre><code>WEB3_INFURA_PROJECT_ID=your infura api key here</code></pre>
+											</li>
 											</li>
 											<li>
 												<p>Run the experiments from the project directory</p>
 												<pre><code>brownie test --network goerli</code></pre>
-											</li>
-											<li>
 												<p>
 													Alternatively, just run the singular unit test
 												</p>
